# megachat-server

./: .gitignore  CMakeLists.txt  README.md  run.sh
lib/include/: bytebuffer.h  chatconnection.h  chatpacketbuilder.h  eventmanager.h  ipaddress.h  structuser.h  tcpconnection.h  tcplistener.h  tcpsocket.h
lib/include/exceptions/: bytebufferexception.h  eventmanagerexception.h  exception.h  ipaddressexception.h  tcpsocketexception.h
lib/include/interfaces/: ibyteconnection.h  ibyteconnectionlistener.h  ichatconnection.h  ichatconnectionlistener.h  ipollingclient.h  itcpconnection.h  itcpconnectionlistener.h  itcplistener.h  itcplistenerlistener.h
src/: CMakeLists.txt  activeclient.cpp  activeclient.h  activeclientlist.cpp  activeclientlist.h  ichatconnectionlistener.h  main.cpp  message.cpp  messagespooler.cpp  messagespooler.h  offlinemessagestore.cpp  server.cpp  userlist.cpp  userlist.h
src/headers/: activeclient.h  activeclientlist.h  message.h  messagespooler.h  offlinemessagestore.h  server.h  userlist.h
src/headers/exception/: cliargexception.h
